// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderClassificationSearch QueryBuilderClassificationSearch Component Display field if match type is equals: Expect text field not to be displayed since the match type is not equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="row"
      >
        <div
          class="col me-1 ms-2 ps-0 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-4-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            class="css-13cymwt-control"
          >
            <div
              class="css-hlgwow"
            >
              <div
                class="css-1jqq78o-placeholder"
                id="react-select-4-placeholder"
              >
                Select classification rank...
              </div>
              <div
                class="css-19bb58m"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-describedby="react-select-4-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-4-input"
                  role="combobox"
                  spellcheck="false"
                  style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="css-1wy0on6"
            >
              <div
                aria-hidden="true"
                class="css-pogzpp-loadingIndicator"
              >
                <span
                  class="css-1icxkl9-LoadingDot"
                />
                <span
                  class="css-1oazjx7-LoadingDot"
                />
                <span
                  class="css-1wonz24-LoadingDot"
                />
              </div>
              <span
                class="css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col me-1 ps-0 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-5-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            class="css-13cymwt-control"
          >
            <div
              class="css-hlgwow"
            >
              <div
                class="css-1dimb5e-singleValue"
              >
                Empty
              </div>
              <div
                class="css-19bb58m"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-5-input"
                  role="combobox"
                  spellcheck="false"
                  style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="css-1wy0on6"
            >
              <span
                class="css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderClassificationSearch QueryBuilderClassificationSearch Component Display field if match type is equals: Expect text field to be displayed since match type is equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <div
        class="row"
      >
        <div
          class="col me-1 ms-2 ps-0 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            class="css-13cymwt-control"
          >
            <div
              class="css-hlgwow"
            >
              <div
                class="css-1jqq78o-placeholder"
                id="react-select-2-placeholder"
              >
                Select classification rank...
              </div>
              <div
                class="css-19bb58m"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-describedby="react-select-2-placeholder"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-2-input"
                  role="combobox"
                  spellcheck="false"
                  style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="css-1wy0on6"
            >
              <div
                aria-hidden="true"
                class="css-pogzpp-loadingIndicator"
              >
                <span
                  class="css-1icxkl9-LoadingDot"
                />
                <span
                  class="css-1oazjx7-LoadingDot"
                />
                <span
                  class="css-1wonz24-LoadingDot"
                />
              </div>
              <span
                class="css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col me-1 ps-0 css-b62m3t-container"
        >
          <span
            class="css-1f43avz-a11yText-A11yText"
            id="react-select-3-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            class="css-1f43avz-a11yText-A11yText"
            role="log"
          />
          <div
            class="css-13cymwt-control"
          >
            <div
              class="css-hlgwow"
            >
              <div
                class="css-1dimb5e-singleValue"
              >
                Exact match
              </div>
              <div
                class="css-19bb58m"
                data-value=""
              >
                <input
                  aria-activedescendant=""
                  aria-autocomplete="list"
                  aria-expanded="false"
                  aria-haspopup="true"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  class=""
                  id="react-select-3-input"
                  role="combobox"
                  spellcheck="false"
                  style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="css-1wy0on6"
            >
              <span
                class="css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="css-1xc3v61-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-tj5bde-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <input
          class="col form-control me-3"
          placeholder="Enter text search value..."
          type="text"
          value=""
        />
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: empty 1`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom",
            },
          },
        },
      },
      {
        "term": {
          "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "",
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: empty 2`] = `
{
  "bool": {
    "minimum_should_match": 1,
    "should": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "material-sample",
                  },
                },
                {
                  "bool": {
                    "minimum_should_match": 1,
                    "should": [
                      {
                        "bool": {
                          "must_not": {
                            "exists": {
                              "field": "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom",
                            },
                          },
                        },
                      },
                      {
                        "term": {
                          "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "",
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "nested": {
              "path": "included",
              "query": {
                "term": {
                  "included.type": "material-sample",
                },
              },
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: exactMatch 1`] = `
{
  "term": {
    "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "Animalia",
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: exactMatch 2`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "term": {
              "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "Animalia",
            },
          },
          {
            "term": {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: in 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
                "case_insensitive": true,
                "value": "Animalia",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: in 2`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
                          "case_insensitive": true,
                          "value": "Animalia",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: notEmpty 1`] = `
{
  "bool": {
    "must": [
      {
        "exists": {
          "field": "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom",
        },
      },
    ],
    "must_not": {
      "term": {
        "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: notEmpty 2`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "exists": {
              "field": "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom",
            },
          },
          {
            "term": {
              "included.type": "material-sample",
            },
          },
        ],
        "must_not": {
          "term": {
            "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: notEquals 1`] = `
{
  "bool": {
    "should": [
      {
        "bool": {
          "must_not": {
            "term": {
              "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "Animalia",
            },
          },
        },
      },
      {
        "bool": {
          "must_not": {
            "exists": {
              "field": "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: notEquals 2`] = `
{
  "bool": {
    "must_not": [
      {
        "nested": {
          "path": "included",
          "query": {
            "bool": {
              "must": [
                {
                  "term": {
                    "included.type": "material-sample",
                  },
                },
                {
                  "term": {
                    "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": "Animalia",
                  },
                },
              ],
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: notIn 1`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": [
          {
            "term": {
              "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
                "case_insensitive": true,
                "value": "Animalia",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: notIn 2`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "bool": {
              "must_not": {
                "bool": {
                  "minimum_should_match": 1,
                  "should": [
                    {
                      "term": {
                        "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
                          "case_insensitive": true,
                          "value": "Animalia",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          {
            "term": {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: startsWith 1`] = `
{
  "prefix": {
    "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
      "case_insensitive": true,
      "value": "Animalia",
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: startsWith 2`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "prefix": {
              "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
                "case_insensitive": true,
                "value": "Animalia",
              },
            },
          },
          {
            "term": {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: wildcard 1`] = `
{
  "wildcard": {
    "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
      "case_insensitive": true,
      "value": "*Animalia*",
    },
  },
}
`;

exports[`QueryBuilderClassificationSearch transformClassificationToDSL function Operation: wildcard 2`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": [
          {
            "wildcard": {
              "included.attributes.targetIdentifiableEntitySummary.primaryDetermination.classification.kingdom.keyword": {
                "case_insensitive": true,
                "value": "*Animalia*",
              },
            },
          },
          {
            "term": {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;
